--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -34,6 +34,8 @@ html {
 
 html,
 html[data-theme="light"] {
+	--text-font: Play;
+        --source-code-font: Source Code Pro;
 	--very-light-text-color: rgb(222, 222, 222);
 	--light-text-color: rgb(196, 187, 240);
 	--medium-text-color: #555;
