--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -250,11 +250,11 @@ blockquote {
 }
 
 h1 {
-	color: var(--main-text-color);
-	font-size: 1.4rem;
-	font-weight: bold;
-	margin-bottom: 1rem;
-	margin-top: 1.5rem;
+color: var(--main-text-color);
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 1.5rem;
+    text-transform: uppercase;
 }
 
 h2 {
