--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,7 +38,7 @@
   
   {% if site.googlewebfonts %}
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?{{ site.googlewebfonts }}&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family={{ site.googlewebfonts }}&display=swap" rel="stylesheet">
   {% endif %}
   
   <link rel="shortcut icon" href="{{ site.url }}/favicon.png">
