--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,13 +1,13 @@
 <head>
   
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0P8ZHWH0HE"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JQC3CKKM9L"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-0P8ZHWH0HE');
+    gtag('config', 'G-JQC3CKKM9L');
   </script>
 
   <meta charset="UTF-8">
