--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,6 +52,29 @@ layout: compress
 </script>
 
 
+  <script type='text/javascript'>
+//<![CDATA[
+    function getParameterByName(name) {
+        name = name.replace(/[\[\]]/g, "\\$&");
+        var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
+            results = regex.exec(window.location.href);
+        if (!results) return null;
+        if (!results[2]) return '';
+        return decodeURIComponent(results[2].replace(/\+/g, " "));
+    }
+
+    var value = getParameterByName('v');
+    if (value === 'view1') {
+        document.getElementById('myButton').style.display = 'block';
+    }
+
+    if (window.history.replaceState) {
+        var newUrl = window.location.href.split('?')[0];
+        window.history.replaceState(null, null, newUrl);
+    }
+//]]>
+</script>
+  
 </body>
 
 <footer class="social-footer">
