--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,8 +52,7 @@ layout: compress
 </script>
 
 
-  <script type='text/javascript'>
-//<![CDATA[
+  <script>
     function getParameterByName(name) {
         name = name.replace(/[\[\]]/g, "\\$&");
         var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
@@ -72,7 +71,6 @@ layout: compress
         var newUrl = window.location.href.split('?')[0];
         window.history.replaceState(null, null, newUrl);
     }
-//]]>
 </script>
   
 </body>
