--- a/_includes/box1.html
+++ b/_includes/box1.html
@@ -1,15 +1,10 @@
-<style>
-    #myButton {
-        display: none; /* Sembunyikan konten secara default */
-        padding: 10px 20px;
-        font-size: 16px;
-        cursor: pointer;
-    }
+<style> #myButton {display: none;padding: 10px 20px; font-size: 16px;cursor: pointer;}.center{text-align:center;position:relative;top:50%;transform:translateY(-50%);width:200px;margin:auto}#startlink{font-size:20px;padding:10px;background-color:#4CAF50;color:#fff;border:none;border-radius:5px;cursor:pointer;margin-top:20px;width:100%}#startButton.hidden{display:none}
 </style>
 
 <div id="myButton">
-    ---Artikel---
-    ---Gambar---
+<div class="center">
+    <a id="startlink" href="">Start Countdown</a>
+</div>
 </div>
 
 
