--- a/_includes/box1.html
+++ b/_includes/box1.html
@@ -4,6 +4,21 @@
 <div id="myButton">
 <div class="center">
  <a id="startlink" href="">𝐖𝐀𝐓𝐂𝐇 𝘕𝘖𝘞 𝘏𝘌𝘙𝘌</a>
+
+ 
+ <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5439326873004541"
+     crossorigin="anonymous"></script>
+<!-- box1 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5439326873004541"
+     data-ad-slot="9145976906"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+ 
 </div>
 </div>
 
