--- a/_includes/box1.html
+++ b/_includes/box1.html
@@ -6,7 +6,7 @@
  <a id="startlink" href="">𝐖𝐀𝐓𝐂𝐇 𝘕𝘖𝘞 𝘏𝘌𝘙𝘌</a>
 </div>
 
-
+<div style="margin:20px 0;text-align: center;">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5439326873004541"
      crossorigin="anonymous"></script>
 <!-- box1 -->
@@ -18,7 +18,7 @@
      data-full-width-responsive="true"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+</script></div>
  
 </div>
 
