--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,6 +20,7 @@ layout: default
   {{ content }}
 </section>
 
+{% include ads1.html %}
 
 <section>
 
@@ -39,11 +40,4 @@ layout: default
   </nav>
 </section>
 
-<script src="https://utteranc.es/client.js"
-        repo="DavideBri/DavideBri.github.io"
-        issue-term="pathname"
-        label="Comments"
-        theme="github-light"      
-        crossorigin="anonymous"
-        async>
-</script>
+
