--- a/_includes/box2.html
+++ b/_includes/box2.html
@@ -21,4 +21,18 @@
 var redirectUrl="https://example.com",startButton=document.getElementById("startButton"),timerDisplay=document.getElementById("timer");function startCountdown(){var t=10;timerDisplay.textContent=t,timerDisplay.style.display="block",startButton.classList.add("hidden");var e=setInterval(function(){t--,(timerDisplay.textContent=t)<=0&&(clearInterval(e),timerDisplay.style.display="none",startButton.textContent="Go to Link",startButton.classList.remove("hidden"),startButton.addEventListener("click",function(){window.location.href=redirectUrl}))},1e3)}startButton.addEventListener("click",function(){"Start Countdown"===startButton.textContent?startCountdown():window.location.href=redirectUrl});
 </script>
 
+    <div style="margin:20px 0;text-align: center;">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5439326873004541"
+     crossorigin="anonymous"></script>
+<!-- box1 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5439326873004541"
+     data-ad-slot="9145976906"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script></div>
+    
 </div>
