--- a/_includes/box1.html
+++ b/_includes/box1.html
@@ -3,7 +3,7 @@
 
 <div id="myButton">
 <div class="center">
- <a id="startlink" href="">𝐖𝐀𝐓𝐂𝐇 𝘕𝘖𝘞 𝘏𝘌𝘙𝘌</a>
+ <a id="startlink" href="https://blog.tvmalaysia.homes/direct1.html">𝐖𝐀𝐓𝐂𝐇 𝘕𝘖𝘞 𝘏𝘌𝘙𝘌</a>
 </div>
 
 <div style="margin:20px 0;text-align: center;">
