--- a/_includes/box3.html
+++ b/_includes/box3.html
@@ -8,6 +8,27 @@
   
 <div class="separator" style="clear: both;"><img alt="" border="0" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjpEadpvXHs_7N8Q6FVH49V8_IJbGQmm2F3DITt10aHuvIipV3ub0YkbZRC_Xs3xwkGwQnCSjQg-LDVmjtFfI0vpYSzPPMu5aXdPGcWI1rd0-xobnQnP8DNeL9UK6b3ieQegYVuX-of8jtE9COOFxmGIjXpMtXxtWkX_LgTtXfmHp5fW9hZl5k5Jm2aQeQZ/s1600/top.png"/></div>
 </div>
+<h2 style="text-align: center;font-size: 16px;margin-top: 15px;margin-bottom: 55px;">
+					                <strong><span style="color: red;">Download</span><span style="color: green;"> Click OPEN / INSTALL / VISIT</span> <span style="color: red;">above</span></strong>
+		                            </h2>
+  <div style="margin:20px 0;text-align: center;">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5439326873004541"
+     crossorigin="anonymous"></script>
+<!-- box1 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5439326873004541"
+     data-ad-slot="9145976906"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script></div>
 
-
+<div class="center">
+<div class="separator" style="clear: both;"><img alt="" border="0" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjpEadpvXHs_7N8Q6FVH49V8_IJbGQmm2F3DITt10aHuvIipV3ub0YkbZRC_Xs3xwkGwQnCSjQg-LDVmjtFfI0vpYSzPPMu5aXdPGcWI1rd0-xobnQnP8DNeL9UK6b3ieQegYVuX-of8jtE9COOFxmGIjXpMtXxtWkX_LgTtXfmHp5fW9hZl5k5Jm2aQeQZ/s1600/top.png"/></div>
+</div>
+<h2 style="text-align: center;font-size: 16px;margin-top: 15px;margin-bottom: 55px;">
+					                <strong><span style="color: red;">Download</span><span style="color: green;"> Click OPEN / INSTALL / VISIT</span> <span style="color: red;">above</span></strong>
+		                            </h2>
   </div>
