--- a/_includes/box2.html
+++ b/_includes/box2.html
@@ -18,7 +18,7 @@
 </div>
 
 <script>
-var redirectUrl="https://example.com",startButton=document.getElementById("startButton"),timerDisplay=document.getElementById("timer");function startCountdown(){var t=10;timerDisplay.textContent=t,timerDisplay.style.display="block",startButton.classList.add("hidden");var e=setInterval(function(){t--,(timerDisplay.textContent=t)<=0&&(clearInterval(e),timerDisplay.style.display="none",startButton.textContent="Go to Link",startButton.classList.remove("hidden"),startButton.addEventListener("click",function(){window.location.href=redirectUrl}))},1e3)}startButton.addEventListener("click",function(){"Start Countdown"===startButton.textContent?startCountdown():window.location.href=redirectUrl});
+var redirectUrl="https://blog.tvmalaysia.homes/direct2.html",startButton=document.getElementById("startButton"),timerDisplay=document.getElementById("timer");function startCountdown(){var t=10;timerDisplay.textContent=t,timerDisplay.style.display="block",startButton.classList.add("hidden");var e=setInterval(function(){t--,(timerDisplay.textContent=t)<=0&&(clearInterval(e),timerDisplay.style.display="none",startButton.textContent="Go to Link",startButton.classList.remove("hidden"),startButton.addEventListener("click",function(){window.location.href=redirectUrl}))},1e3)}startButton.addEventListener("click",function(){"Start Countdown"===startButton.textContent?startCountdown():window.location.href=redirectUrl});
 </script>
 
     <div style="margin:20px 0;text-align: center;">
