--- a/_includes/box2.html
+++ b/_includes/box2.html
@@ -13,7 +13,7 @@
 </style>
 
 <div class="center">
-    <button id="startButton">Start Countdown</button>
+    <button id="startButton">Click here</button>
     <div id="timer">10</div>
 </div>
 
