--- a/_includes/box2.html
+++ b/_includes/box2.html
@@ -1,6 +1,6 @@
 <style>
     #myButton {
-        display: none; /* Sembunyikan konten secara default */
+        display: none; 
         padding: 10px 20px;
         font-size: 16px;
         cursor: pointer;
